# rust-backend

./: Cargo.toml
migrations/: 20250123154755_create_blog_posts_table.sql  20250123154755_create_blog_spots_table.sql
src/: main.rs
