[package]
name = "rust-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
chrono = "0.4.39"
dotenv = "0.15.0"
env_logger = "0.11.6"
futures-util = "0.3.31"
mongodb = "3.2.0"
postgres = "0.19.9"
serde = { version = "1.0.217", features = ["derive"] }
sqlx = { version = "0.8.3", features = ["postgres","runtime-async-std"] }
